# Book-Shelf

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
saves/: test.bs  test.json
src/: _lib.rs  book.rs  file.rs  lib.rs  main.rs  narator.rs  nbook.rs  person.rs  publisher.rs  series.rs  share.rs
src/app/: app_state.rs  mod.rs  options.rs  view.rs
src/app/components/: book_manger.rs  library.rs  mod.rs  options.rs  top_bar.rs
src/book_shelf/: book.rs  config.rs  mod.rs
src/book_stuf/: book.rs  books.rs  container.rs  librarian.rs  mod.rs  stored_book.rs
src/file/: cue.rs  mod.rs
