[package]
name = "book_shelf"
version = "0.1.0"
authors = ["ChousX <gmanenergy@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
audiotags = "0.2"
serde = {version = "1.0.125", features = ["derive"]}
serde_json = "1.0"
str_overlap = "0.4.3"
