[package]
name = "book_shelf"
version = "0.1.0"
authors = ["ChousX <gmanenergy@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[target.cfg]
# runner = "…"            # wrapper to run executables
rustflags = ["cli"]  # custom flags for `rustc`

[dependencies]
lofty = "0.9.0"

log = "0.4.17"
serde = {version = "1.0.125", features = ["derive"]}
serde_json = "1.0"
str_overlap = "0.4.3"
nfo = { git = "https://github.com/ChousX/nfo.git"}
chrono = "0.4.23"
unicode-segmentation = "1.10.0"
