[package]
name = "book_shelf"
version = "0.1.0"
authors = ["ChousX <gmanenergy@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[target.cfg]
# runner = "…"            # wrapper to run executables
rustflags = ["cli"]  # custom flags for `rustc`

[dependencies]
log = "0.4.17"
str_overlap = "0.4.3"
nfo = { git = "https://github.com/ChousX/nfo.git"}
chrono = { version = "0.4.23", features = ["serde"] }
unicode-segmentation = "1.10.0"
mp4ameta = "0.11.0"
eframe = "0.20.1"
egui_extras = {version = "0.20.0", features = ["image"]}
image = { version = "0.24.5", default-features = false, features = ["jpeg", "png"] }
poll-promise = "0.2.0"
lofty = "0.9.0"
ron = "0.8"
serde = { version = "1", features = ["derive"] }

